# verifiers

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: README.md  style.yml
assets/agents/: common_best_practices.md  end_user_best_practices.md  repo_development_best_practices.md
assets/lab/: AGENTS.md
configs/: endpoints.py  endpoints.toml
docs/: development.md  environments.md  evaluation.md  faqs.md  overview.md  reference.md  training.md
environments/: AGENTS.md  README.md
environments/tictactoe/: .env-metadata.json  README.md  article.md  config.toml  ex_training_config.toml  notes.md  pyproject.toml  tictactoe.py  tictactoe_basic.py
environments/tictactoe/outputs/evals/tictactoe--gpt-4.1-mini/a7b4da30/: metadata.json  results.jsonl
environments/tictactoe/outputs/evals/tictactoe--gpt-4.1-mini/f64b653e/: metadata.json  results.jsonl
environments/tictactoe/outputs/evals/tictactoe--willcb--Qwen3-0.6B/89bc3197/: metadata.json  results.jsonl
environments/tictactoe/outputs/evals/tictactoe--willcb--Qwen3-0.6B/c85cafb0/: metadata.json  results.jsonl
tests/: conftest.py  test_async_utils.py  test_endpoint_registry.py  test_environment.py  test_environment_audio_modality.py  test_environment_extra.py  test_envs.py  test_eval_cli.py  test_eval_display.py  test_math_rubric.py  test_path_utils.py  test_rlm_env.py  test_rlm_env_sandbox.py  test_sandbox_mixin.py  test_save_utils.py  test_setup_script.py  test_tool_env.py  test_tui_info_formatting.py  test_worker_client_timeouts.py
verifiers/: __init__.py  types.py
(+67 files in other folders)
