[project]
name = "tictactoe"
description = "Tic-Tac-Toe environment"
tags = ["games", "train", "eval"]
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["tictactoe.py", "pyproject.toml"]
